<resources>
    <string name="app_name">GUDEnergy</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_age">Age</string>
    <string name="hint_password">Password</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="text_log_in">LOGIN</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Sign Up Successful</string>
    <string name="hint_pin">Enter 4 Digit Pin</string>
    <string name="title_activity_main">GUDEnergy</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hint_station_name">Station Name</string>
    <string name="hint_station_chairman_name">Station Chairman\'s Name</string>
    <string name="hint_station_chairman_number">Station Chairman\'s Phone Number</string>
    <string name="hint_driver_name">Driver Name</string>
    <string name="hint_driver_nrc">Driver NRC</string>
    <string name="hint_license_number">License Number</string>
    <string name="hint_driver_number">Driver Phone Number</string>
    <string name="hint_vehicle_reg_number">Vehicle Reg Number</string>
    <string name="hint_vehicle_owners_name">Vehicle Owner Name</string>
    <string name="hint_vehicle_owners_phone">Vehicle Owner Phone Number</string>
    <string name="hint_date_of_registration">Date of Registration</string>

    <string name="hint_payment_nrc">Enter NRC For Payment</string>
    <string name="button_enter">Enter</string>
    <string name="hint_amount">Enter Amount</string>
    <string name="hint_select_date">Select Date</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="hint_enter_second_name">Enter Last Name</string>
    <string name="hint_enter_user_name">Enter User Name</string>
    <string name="hint_enter_user_nrc">Enter User NRC</string>
    <string name="button_select_employee_type">Select Employee Type</string>
    <string name="logout">Logout</string>
    <string name="hint_enter_station_name">Enter Station Name</string>
    <string name="hint_enter_username">Enter Username</string>

</resources>
