<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/login_gradient"
        tools:context="com.example.simon.brisol.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LOGIN"
                android:textColor="#fff"
                android:textSize="35dp"
                android:gravity="center"
                android:layout_marginTop="90dp"/>-->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/gudweks"/>

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_enter_username"
                android:textColorHint="@color/purpleEnd"
                android:textColor="@color/purpleEnd"
                android:textColorLink="@color/purpleEnd"
                android:background="@color/white"/>

            <EditText
                android:id="@+id/edit_text_pin"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:hint="@string/hint_pin"
                android:inputType="number|numberPassword"
                android:digits="0123456789"
                android:maxLength="4"
                android:textColorHint="@color/purpleEnd"
                android:textColor="@color/purpleEnd"
                android:textColorLink="@color/purpleEnd"
                android:background="@color/white"/>


            <Button
                android:id="@+id/button_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_top"
                android:background="#fff"
                android:text="@string/text_log_in"
                android:textColor="@color/purpleEnd" />
        </LinearLayout>

    </ScrollView>


    </LinearLayout>